k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: password
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
