k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: password
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /              # Frontend
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 80
        - path: /api           # Backend API
          pathType: Prefix
          backend:
            service:
              name: backend-service
              port:
                number: 3000
